project(dst C)
cmake_minimum_required(VERSION 3.1 FATAL_ERROR)
set(CMAKE_BUILD_TYPE Debug)
add_compile_options(-Wall -Wextra -pedantic -Werror)
find_package(PkgConfig)
find_package(X11 REQUIRED)
pkg_check_modules(PC_Libuv QUIET libuv)
add_subdirectory(src)
list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake/Modules")
find_package(CMocka CONFIG REQUIRED)
include(AddCMockaTest)
include(AddMockedTest)
add_subdirectory(tests)
enable_testing()
