add_library(x       OBJECT x.c x.h)
add_library(power   OBJECT power.c power.h)
add_library(report  OBJECT report.c report.h)
add_library(context OBJECT context.c context.h)
add_library(load    OBJECT load.c load.h)
add_library(io      OBJECT io.c io.h)
add_executable(dst main.c main.h)
target_link_libraries(dst power report context x X11 uv xkbfile load)
install(TARGETS dst RUNTIME DESTINATION bin)
